// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GraphQL Schema extensions should return annotation and lastRefreshTime in extensions 1`] = `
Object {
  "data": Object {
    "cube": Array [
      Object {
        "orders": Object {
          "count": "10",
          "status": "completed",
          "totalAmount": "500",
        },
      },
      Object {
        "orders": Object {
          "count": "5",
          "status": "pending",
          "totalAmount": "200",
        },
      },
    ],
  },
  "extensions": Object {
    "annotation": Object {
      "dimensions": Object {
        "Orders.status": Object {
          "shortTitle": "Status",
          "title": "Orders Status",
          "type": "string",
        },
      },
      "measures": Object {
        "Orders.count": Object {
          "shortTitle": "Count",
          "title": "Orders Count",
          "type": "number",
        },
        "Orders.totalAmount": Object {
          "shortTitle": "Total Amount",
          "title": "Orders Total Amount",
          "type": "number",
        },
      },
      "segments": Object {},
      "timeDimensions": Object {},
    },
    "lastRefreshTime": "2025-06-01T12:00:00.000Z",
  },
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 0 1`] = `
Object {
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 1 1`] = `
Object {
  "filters": Array [
    Object {
      "member": "Orders.status",
      "operator": "equals",
      "values": Array [
        "shipped",
      ],
    },
  ],
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 2 1`] = `
Object {
  "dimensions": Array [
    "Orders.createdAt",
  ],
  "measures": Array [
    "Orders.count",
  ],
  "order": Array [
    Array [
      "Orders.createdAt",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": Array [
        "2022-01-01",
        "2022-02-01",
      ],
      "dimension": "Orders.createdAt",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 3 1`] = `
Object {
  "measures": Array [
    "Orders.count",
  ],
  "order": Array [
    Array [
      "Orders.createdAt",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": Array [
        "2022-01-01",
        "2022-02-01",
      ],
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 4 1`] = `
Object {
  "dimensions": Array [
    "Orders.createdAt",
  ],
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This month",
      "dimension": "Orders.createdAt",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 5 1`] = `
Object {
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This month",
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 6 1`] = `
Object {
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "2 weeks ago to now",
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 7 1`] = `
Object {
  "filters": Array [
    Object {
      "member": "Orders.createdAt",
      "operator": "notInDateRange",
      "values": Array [
        "2022-01-01",
        "2022-02-01",
      ],
    },
  ],
  "measures": Array [
    "Orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "Orders.createdAt",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 8 1`] = `
Object {
  "dimensions": Array [
    "Orders.status",
    "Orders.createdAt",
    "Users.city",
  ],
  "measures": Array [
    "Orders.count",
  ],
  "order": Array [
    Array [
      "Orders.count",
      "desc",
    ],
    Array [
      "Orders.status",
      "asc",
    ],
    Array [
      "Users.city",
      "desc",
    ],
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 9 1`] = `
Object {
  "dimensions": Array [
    "Orders.status",
  ],
  "filters": Array [
    Object {
      "or": Array [
        Object {
          "or": Array [
            Object {
              "member": "Users.city",
              "operator": "notSet",
            },
            Object {
              "member": "Users.city",
              "operator": "equals",
              "values": Array [
                "US",
              ],
            },
          ],
        },
      ],
    },
    Object {
      "member": "Orders.status",
      "operator": "equals",
      "values": Array [
        "canceled",
        "active",
      ],
    },
  ],
  "measures": Array [
    "Orders.count",
  ],
}
`;

exports[`GraphQL Schema with camelCase GraphQL query 10 1`] = `
Object {
  "measures": Array [
    "Orders.count",
  ],
  "order": Array [
    Array [
      "Orders.createdAt",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This year",
      "dimension": "Orders.createdAt",
      "granularity": "year",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 0 1`] = `
Object {
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 1 1`] = `
Object {
  "filters": Array [
    Object {
      "member": "orders.status",
      "operator": "equals",
      "values": Array [
        "shipped",
      ],
    },
  ],
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 2 1`] = `
Object {
  "dimensions": Array [
    "orders.created_at",
  ],
  "measures": Array [
    "orders.count",
  ],
  "order": Array [
    Array [
      "orders.created_at",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": Array [
        "2022-01-01",
        "2022-02-01",
      ],
      "dimension": "orders.created_at",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 3 1`] = `
Object {
  "measures": Array [
    "orders.count",
  ],
  "order": Array [
    Array [
      "orders.created_at",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": Array [
        "2022-01-01",
        "2022-02-01",
      ],
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 4 1`] = `
Object {
  "dimensions": Array [
    "orders.created_at",
  ],
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This month",
      "dimension": "orders.created_at",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 5 1`] = `
Object {
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This month",
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 6 1`] = `
Object {
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "2 weeks ago to now",
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 7 1`] = `
Object {
  "filters": Array [
    Object {
      "member": "orders.created_at",
      "operator": "notInDateRange",
      "values": Array [
        "2022-01-01",
        "2022-02-01",
      ],
    },
  ],
  "measures": Array [
    "orders.count",
  ],
  "timeDimensions": Array [
    Object {
      "dimension": "orders.created_at",
      "granularity": "day",
    },
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 8 1`] = `
Object {
  "dimensions": Array [
    "orders.status",
    "orders.created_at",
    "users.city",
  ],
  "measures": Array [
    "orders.count",
  ],
  "order": Array [
    Array [
      "orders.count",
      "desc",
    ],
    Array [
      "orders.status",
      "asc",
    ],
    Array [
      "users.city",
      "desc",
    ],
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 9 1`] = `
Object {
  "dimensions": Array [
    "orders.status",
  ],
  "filters": Array [
    Object {
      "or": Array [
        Object {
          "or": Array [
            Object {
              "member": "users.city",
              "operator": "notSet",
            },
            Object {
              "member": "users.city",
              "operator": "equals",
              "values": Array [
                "US",
              ],
            },
          ],
        },
      ],
    },
    Object {
      "member": "orders.status",
      "operator": "equals",
      "values": Array [
        "canceled",
        "active",
      ],
    },
  ],
  "measures": Array [
    "orders.count",
  ],
}
`;

exports[`GraphQL Schema with snake_case GraphQL query 10 1`] = `
Object {
  "measures": Array [
    "orders.count",
  ],
  "order": Array [
    Array [
      "orders.created_at",
      "asc",
    ],
  ],
  "timeDimensions": Array [
    Object {
      "dateRange": "This year",
      "dimension": "orders.created_at",
      "granularity": "year",
    },
  ],
}
`;
